--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,12 @@ defaults:
     values:
       layout: "default"
       title: "Pixel Value official site"
+      links:
+        - intro
+        - vision
+        - services
+        - contacts
+
 
 url: "http://pixelvalue.io"
 og_image: "/assets/og_image.png"
